--- a/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/LeaveATip/LeaveATipVC.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/LeaveATip/LeaveATipVC.xib
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LeaveATipVC">
             <connections>
                 <outlet property="btFacebook" destination="14" id="37"/>
-                <outlet property="btLeaveATip" destination="16" id="35"/>
                 <outlet property="btSave" destination="10" id="34"/>
-                <outlet property="btTipView" destination="uet-CF-kml" id="VKk-sJ-T6z"/>
-                <outlet property="btTwitter" destination="15" id="36"/>
                 <outlet property="lbRestaurantDetail" destination="8" id="22"/>
                 <outlet property="lbRestaurantName" destination="7" id="23"/>
                 <outlet property="lbTimeOpen" destination="9" id="c6E-Ps-aox"/>
                 <outlet property="lbTvTip" destination="19" id="24"/>
+                <outlet property="shareFacebookLabel" destination="fMK-ux-Fwm" id="Jrb-fV-ECq"/>
                 <outlet property="tvTip" destination="17" id="25"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
@@ -134,7 +132,7 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="14" userLabel="Button- facebook">
-                            <rect key="frame" x="20" y="165" width="24" height="24"/>
+                            <rect key="frame" x="47" y="165" width="24" height="24"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                             <state key="normal" backgroundImage="facebook_off.png">
@@ -146,36 +144,6 @@
                             </state>
                             <connections>
                                 <action selector="actionShareFacebook:" destination="-1" eventType="touchUpInside" id="31"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="15" userLabel="Button - twitter">
-                            <rect key="frame" x="52" y="165" width="24" height="24"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                            <state key="normal" backgroundImage="twitter_off.png">
-                                <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <state key="highlighted">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="actionShareTwitter:" destination="-1" eventType="touchUpInside" id="32"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="16" userLabel="Button - leave tip">
-                            <rect key="frame" x="97" y="163" width="123" height="28"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
-                            <state key="normal" backgroundImage="ic_bt_leavetip.png">
-                                <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <state key="highlighted">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="actionLeaveATip:" destination="-1" eventType="touchUpInside" id="28"/>
                             </connections>
                         </button>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="box279_186.png" id="18">
@@ -198,16 +166,11 @@
                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="14"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="uet-CF-kml">
-                            <rect key="frame" x="116" y="165" width="89" height="23"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <color key="backgroundColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.55686274509803924" alpha="1" colorSpace="calibratedRGB"/>
-                        </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="UPz-av-vIG">
-                            <rect key="frame" x="97" y="159" width="123" height="36"/>
+                            <rect key="frame" x="107" y="165" width="107" height="24"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
-                            <state key="normal" title="Leave a Tip">
+                            <state key="normal" title="Leave a Tip" backgroundImage="rounded_orange.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <state key="disabled" title="Leave a Tip"/>
@@ -217,6 +180,13 @@
                                 <action selector="actionLeaveATip:" destination="-1" eventType="touchUpInside" id="bfP-QN-NPY"/>
                             </connections>
                         </button>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sharing Off" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fMK-ux-Fwm">
+                            <rect key="frame" x="29" y="185" width="61" height="21"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="10"/>
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
@@ -234,10 +204,9 @@
         <image name="facebook_off.png" width="23" height="23"/>
         <image name="ic_ask.png" width="30" height="30"/>
         <image name="ic_bt_back.png" width="30" height="30"/>
-        <image name="ic_bt_leavetip.png" width="123" height="28"/>
         <image name="ic_bt_share.png" width="30" height="30"/>
         <image name="ic_saved.png" width="30" height="30"/>
+        <image name="rounded_orange.png" width="120" height="17"/>
         <image name="topbar2.png" width="320" height="44"/>
-        <image name="twitter_off.png" width="23" height="23"/>
     </resources>
 </document>
